Fixed Chat Method of Visibility
Now using css display property flex and hidden

--- a/frontend/qwik-app/src/global.css
+++ b/frontend/qwik-app/src/global.css
@@ -11,7 +11,9 @@ body {
   min-height: 100vh;
   color: #fff;
 }
-
+/* .hidden{
+  display: none;
+} */
 header {
   background-blend-mode: color-dodge;
   background-color: #0b1120;
